tests/snapshots/regression__snapshot_gaussian_pspline.snap
---
source: tests/regression.rs
expression: snap
---
converged: true
iterations: 11
coefficients:
  mu:
    - "6.4495e1"
    - "-3.0854e1"
    - "8.9445e0"
    - "4.8743e1"
    - "8.8542e1"
    - "1.2834e2"
  sigma:
    - "-9.7953e-2"
edf:
  mu: "2.0000e0"
  sigma: "1.0000e0"
lambdas:
  mu:
    - "8.0e5"
  sigma: []
log_likelihood: "-1.5852e2"
aic: "3.2304e2"
bic: "3.3140e2"
