tests/snapshots/regression__snapshot_heteroskedastic_gaussian.snap
---
source: tests/regression.rs
assertion_line: 140
expression: snap
---
converged: true
iterations: 6
coefficients:
  mu:
    - "9.9101e0"
    - "2.0714e0"
  sigma:
    - "-1.1716e0"
    - "5.4979e-1"
edf:
  mu: "2.0000e0"
  sigma: "2.0000e0"
lambdas:
  mu: []
  sigma: []
log_likelihood: "-1.2782e2"
aic: "2.6364e2"
bic: "2.7479e2"
